Branch för utveckling

--- a/src/photos.html
+++ b/src/photos.html
@@ -9,9 +9,7 @@
 </head>
 <body>
     <main>
-        <h1>Moment 1 - Automatisering & publicering</h1>
-        <h2>Information om uppgiften</h2>
-        <p></p>
+        <h1>Bilder</h1>
     </main>
 </body>
 </html>
