--- a/src/process.html
+++ b/src/process.html
@@ -9,9 +9,8 @@
 </head>
 <body>
     <main>
-        <h1>Moment 1 - Automatisering & publicering</h1>
-        <h2>Information om uppgiften</h2>
-        <p></p>
+        <h1>Arbetsprocess</h1>
+        <p>Fyller i sen</p>
     </main>
 </body>
 </html>
