--- a/src/photos.html
+++ b/src/photos.html
@@ -8,6 +8,15 @@
     <script type="module" src="app.js"></script>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Startsida</a></li>
+                <li><a href="photos.html">Bilder</a></li>
+                <li><a href="process.html">Arbetsprocess</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <h1>Bilder</h1>
     </main>
