--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,15 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Startsida</a></li>
+                <li><a href="photos.html">Bilder</a></li>
+                <li><a href="process.html">Arbetsprocess</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <h1>Moment 1 - Automatisering & publicering</h1>
         <h2>Information om uppgiften</h2>
