Stil på navigering

--- a/src/photos.html
+++ b/src/photos.html
@@ -11,9 +11,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Startsida</a></li>
+                <li class="page"><a href="index.html">Startsida</a></li>
                 <li><a href="photos.html">Bilder</a></li>
-                <li><a href="process.html">Arbetsprocess</a></li>
+                <li class="page"><a href="process.html">Arbetsprocess</a></li>
             </ul>
         </nav>
     </header>
