--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Startsida</a></li>
-                <li><a href="photos.html">Bilder</a></li>
-                <li><a href="process.html">Arbetsprocess</a></li>
+                <li class="page"><a href="photos.html">Bilder</a></li>
+                <li class="page"><a href="process.html">Arbetsprocess</a></li>
             </ul>
         </nav>
     </header>
