--- a/src/process.html
+++ b/src/process.html
@@ -11,8 +11,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Startsida</a></li>
-                <li><a href="photos.html">Bilder</a></li>
+                <li class="page"><a href="index.html">Startsida</a></li>
+                <li class="page"><a href="photos.html">Bilder</a></li>
                 <li><a href="process.html">Arbetsprocess</a></li>
             </ul>
         </nav>
