--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moment 1</title>
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="app.js"></script>
+    <link rel="stylesheet" href="css/styles.css"/>
+    <script type="module" src="js/app.js"></script>
 </head>
 
 <body>
