--- a/src/process.html
+++ b/src/process.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moment 1</title>
-    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/styles.css" />
     <script type="module" src="js/app.js"></script>
 </head>
+
 <body>
     <header>
         <nav>
@@ -19,7 +21,18 @@
     </header>
     <main>
         <h1>Arbetsprocess</h1>
-        <p>Fyller i sen</p>
+        <p>Processen började med att skapa en ny mapp och installera npm:et Parcel via NodeJS i kommandotolken
+            som
+            skulle användas till
+            att automatisera olika delar av utvecklingen. Detta underlättar arbetet.
+            Efter det började arbetet i VSCode och en gitignore fil skapades för att inte föra över onödiga filer till
+            GitHub. Inställningar gjordes även i JSON filer för att automatiseringen skulle bli korrekt. Därefter
+            kopplades uppgiften ihop med GitHub via VSCode.
+            Alla nödvändiga filer skapades och innehåll samt stil för webbplatsen kodades medan regelbundna commits
+            gjordes till GitHub. Två olika branches användes, en för utveckling och en som sedan skulle användas för att
+            slå samman och publicera det slutgiltiga resultatet. Denna main branch knöts ihop från GitHub till Netlify
+            för att ändringar i den automatiskt ska publiceras på sidan.</p>
     </main>
 </body>
+
 </html>
