--- a/src/photos.html
+++ b/src/photos.html
@@ -20,34 +20,34 @@
     <main>
         <h1>Bilder</h1>
         <picture>
-            <source srcset="image1.jpg?as=avif%width=800" type="image/avif">
-            <source srcset="image1.jpg?as=webp%width=800" type="image/webp">
-            <source srcset="image1.jpg?width=800" type="image/jpg">
-            <img src="images/image1.jpg?width=200" class="image" alt="">
+            <source srcset="images/image1.jpg?as=avif&width=800" type="image/avif">
+            <source srcset="images/image1.jpg?as=webp&width=800" type="image/webp">
+            <source srcset="images/image1.jpg?width=800" type="image/jpg">
+            <img src="../src/images/image1.jpg" class="image" alt="">
         </picture>
         <picture>
-            <source srcset="image2.jpg?as=avif%width=800" type="image/avif">
-            <source srcset="image2.jpg?as=webp%width=800" type="image/webp">
-            <source srcset="image2.jpg?width=800" type="image/jpg">
-            <img src="images/image2.jpg" class="image" alt="">
+            <source srcset="images/image2.jpg?as=avif&width=800" type="image/avif">
+            <source srcset="images/image2.jpg?as=webp&width=800" type="image/webp">
+            <source srcset="images/image2.jpg?width=800" type="image/jpg">
+            <img src="../src/images/image2.jpg" class="image" alt="">
         </picture>
         <picture>
-            <source srcset="image3.jpg?as=avif%width=800" type="image/avif">
-            <source srcset="image3.jpg?as=webp%width=800" type="image/webp">
-            <source srcset="image3.jpg?width=800" type="image/jpg">
-            <img src="images/image3.jpg" class="image" alt="">
+            <source srcset="images/image3.jpg?as=avif&width=800" type="image/avif">
+            <source srcset="images/image3.jpg?as=webp&width=800" type="image/webp">
+            <source srcset="images/image3.jpg?width=800" type="image/jpg">
+            <img src="../src/images/image3.jpg" class="image" alt="">
         </picture>
         <picture>
-            <source srcset="image4.jpg?as=avif%width=800" type="image/avif">
-            <source srcset="image4.jpg?as=webp%width=800" type="image/webp">
-            <source srcset="image4.jpg?width=800" type="image/jpg">
-            <img src="images/image4.jpg" class="image" alt="">
+            <source srcset="images/image4.jpg?as=avif&width=800" type="image/avif">
+            <source srcset="images/image4.jpg?as=webp&width=800" type="image/webp">
+            <source srcset="images/image4.jpg?width=800" type="image/jpg">
+            <img src="../src/images/image4.jpg" class="image" alt="">
         </picture>
         <picture>
-            <source srcset="image5.jpg?as=avif%width=800" type="image/avif">
-            <source srcset="image5.jpg?as=webp%width=800" type="image/webp">
-            <source srcset="image5.jpg?width=800" type="image/jpg">
-            <img src="images/image5.jpg" class="image" alt="">
+            <source srcset="images/image5.jpg?as=avif&width=800" type="image/avif">
+            <source srcset="images/image5.jpg?as=webp&width=800" type="image/webp">
+            <source srcset="images/image5.jpg?width=800" type="image/jpg">
+            <img src="../src/images/image5.jpg" class="image" alt="">
         </picture>
     </main>
 </body>
