Placering av bilder

--- a/src/photos.html
+++ b/src/photos.html
@@ -17,7 +17,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="photos">
         <h1>Bilder</h1>
         <picture>
             <source srcset="images/image1.jpg?as=avif&width=800" type="image/avif">
