--- a/src/process.html
+++ b/src/process.html
@@ -21,17 +21,22 @@
     </header>
     <main>
         <h1>Arbetsprocess</h1>
-        <p>Processen började med att skapa en ny mapp och installera npm:et Parcel via NodeJS i kommandotolken
+        <p>Processen började med att skapa en ny mapp lokalt på datorn och installera npm:et Parcel via NodeJS i
+            kommandotolken
             som
-            skulle användas till
-            att automatisera olika delar av utvecklingen. Detta underlättar arbetet.
+            sedan skulle användas till
+            att automatisera olika delar av utvecklingen och underlätta arbetet.
             Efter det började arbetet i VSCode och en gitignore fil skapades för att inte föra över onödiga filer till
-            GitHub. Inställningar gjordes även i JSON filer för att automatiseringen skulle bli korrekt. Därefter
-            kopplades uppgiften ihop med GitHub via VSCode.
-            Alla nödvändiga filer skapades och innehåll samt stil för webbplatsen kodades medan regelbundna commits
+            GitHub. Inställningar gjordes även i JSON filer för att automatiseringen av kod och bilder skulle bli
+            korrekt. Därefter
+            kopplades uppgiften ihop med GitHub via VSCode. Alla nödvändiga filer skapades och det var viktigt att ha en
+            bra filstruktur redan från början. För att ha en tillfällig liveserver att se sidan på och få en dist-katalog
+            för de filer som ska publiceras kördes npm run start.
+            Innehåll samt stil för webbplatsen kodades medan regelbundna commits
             gjordes till GitHub. Två olika branches användes, en för utveckling och en som sedan skulle användas för att
             slå samman och publicera det slutgiltiga resultatet. Denna main branch knöts ihop från GitHub till Netlify
-            för att ändringar i den automatiskt ska publiceras på sidan.</p>
+            för att ändringar i den automatiskt ska publiceras på sidan. Slutligen kördes npm run build för att optimera
+            filerna så mycket som möjligt i dist.</p>
     </main>
 </body>
 
