--- a/src/process.html
+++ b/src/process.html
@@ -36,7 +36,7 @@
             gjordes till GitHub. Två olika branches användes, en för utveckling och en som sedan skulle användas för att
             slå samman och publicera det slutgiltiga resultatet. Denna main branch knöts ihop från GitHub till Netlify
             för att ändringar i den automatiskt ska publiceras på sidan. Slutligen kördes npm run build för att optimera
-            filerna så mycket som möjligt i dist.</p>
+            filerna så mycket som möjligt i dist. Sedan slågs grenarna ihop så att main även fick det som fanns i development och sidan publicerades på Netlify.</p>
     </main>
 </body>
 
