Implementera ändringar från dev branch

--- a/src/process.html
+++ b/src/process.html
@@ -30,13 +30,15 @@
             GitHub. Inställningar gjordes även i JSON filer för att automatiseringen av kod och bilder skulle bli
             korrekt. Därefter
             kopplades uppgiften ihop med GitHub via VSCode. Alla nödvändiga filer skapades och det var viktigt att ha en
-            bra filstruktur redan från början. För att ha en tillfällig liveserver att se sidan på och få en dist-katalog
+            bra filstruktur redan från början. För att ha en tillfällig liveserver att se sidan på och få en
+            dist-katalog
             för de filer som ska publiceras kördes npm run start.
             Innehåll samt stil för webbplatsen kodades medan regelbundna commits
             gjordes till GitHub. Två olika branches användes, en för utveckling och en som sedan skulle användas för att
             slå samman och publicera det slutgiltiga resultatet. Denna main branch knöts ihop från GitHub till Netlify
             för att ändringar i den automatiskt ska publiceras på sidan. Slutligen kördes npm run build för att optimera
-            filerna så mycket som möjligt i dist. Sedan slågs grenarna ihop så att main även fick det som fanns i development och sidan publicerades på Netlify.</p>
+            filerna så mycket som möjligt i dist. Sedan slågs grenarna ihop så att main även fick det som fanns i
+            development och sidan publicerades på Netlify.</p>
     </main>
 </body>
 
